--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 	background: lightgray;
 }
 .wrapper {
-	min-height: calc(100% - 42px);
+	min-height: 100%;
 	background: #fff;
 }
 
@@ -61,6 +61,7 @@ h3{
 	
 	font: 0.8em furoreregular;
 }
+
 .lang_selector{
 	margin-left: -250px;
 	float: right;
@@ -168,12 +169,12 @@ main {
 	min-height: 100%;
 }
 
-.left-sidebar > ul {
+.sidebar_menu {
 	list-style: none;
 	padding-left: 5%;
 	padding-top: 20px;
 }
-.left-sidebar > ul li{
+.sidebar_menu li{
 	margin-top: 10px;
 	margin-right: 10px;
 	background: red;
@@ -182,13 +183,13 @@ main {
 	overflow: hidden;
 	
 }
-.left-sidebar > ul li:hover{
+.sidebar_menu li:hover{
 	margin-left: 5px;
 	margin-right: 0;
 	cursor: pointer;
 }
 
-.left-sidebar p{
+.sidebar_menu li p{
 	display: inline-block;
 	text-shadow: -1px -1px 1px  #000;
 	color: white;
@@ -197,7 +198,7 @@ main {
 	vertical-align: middle;
 }
 
-.left-sidebar > ul li:before{
+.sidebar_menu li:before{
 	content: '';
 	transform: rotate(45deg);
 	display: inline-block;
@@ -206,6 +207,14 @@ main {
 	margin-left: -21px;
 	background: #fff;
 	float: left;
+}
+
+.social_icons{
+	list-style: none;
+	margin-top: 50px;	
+}
+.social_icons li{
+margin-top: 5px;	
 }
 
 
@@ -217,6 +226,7 @@ main {
 	align-items: center;
 	justify-content: center;
 	background: #BFF08E;
+	box-sizing: border-box;
 	border: 1px solid green;
-	height: 40px;	
+	width: 100%;
 }
